# enotes

./: AUTHORS  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  config.h.in  configure  configure.ac  description  eflprj  meson.build  test.txt
autom4te.cache/: output.0  requests  traces.0  traces.1
data/: Makefile.am  Makefile.in
data/desktop/: Makefile.am  Makefile.in  enotes.desktop  enotes.desktop.in  meson.build
data/images/: Makefile.am  Makefile.in  meson.build
data/themes/: Makefile.in  enotes.edc  entry_theme.edj  meson.build  perms.sh
data/themes/default/: Makefile.am  Makefile.in  default.edc
data/themes/default/images/: shadow_corner.xcf
doc/: Makefile.am  Makefile.in  enotes.1.in
packaging/: Makefile.in
packaging/pkgbuild/: Makefile.in  PKGBUILD
packaging/slackware/: Makefile.am  Makefile.in  skeleton.SlackBuild  slack-desc
po/: POTFILES.in  de.gmo  de.mo  de.po  enotes.pot  meson.build
src/: Makefile.in
src/lib/: Enotes.h  Makefile.am  Makefile.in  enotes.c  enotes.gcno  enotes_private.h
src/tests/: Makefile.am  Makefile.in  test_enotes.c
