install_data('f1.png',
             'f2.png',
             'f3.png',
             'f4.png',
             'f5.png',
             'f6.png',
             'f7.png',
             'f8.png',
             'f9.png',
             'f10.png',
             'ctl+m.png',
             'ctl+q.png',
             'ctl+mousewheel.png',
             'esc.png',
             install_dir: join_paths(dir_data, 'enotes/images'))
